# sdev_py_utils

./: .#README.md  .gitignore  README.md  create_modules_cli.py  gpt_utils.py  install_development.py  install_production.py
docs/: conf.py  create_modules_cli.rst  index.rst  install_development.rst  install_production.rst  modular_templating.rst  modules.rst  network_analysis.rst  sdev_algo_utils.rst  sdev_concurrency_utils.rst  sdev_decorator_utils.rst  sdev_introspection_utils.rst  sdev_lib_utils.rst  sdev_logging_utils.rst  sdev_misc_utils.rst  sdev_pycore_utils.rst  sdev_pytech_utils.rst  sdev_scipy_utils.rst  sdev_search_utils.rst  sdev_viz_utils.rst
generic_scripts/: README.md  generate_fastapi.py  project_manager.sh
modular_templating/: README.md  setup.py
rag/: oai_mcp_tool.py
sdev_algo_utils/: setup.py
sdev_c_utils/: build.bash  memory_arena.c  memory_arena.h  sdev_c_utils.c  setup.py  test.py
sdev_concurrency_utils/: setup.py
sdev_scipy_utils/: .setup.py.~undo-tree~  pyproject.toml  setup.py
sdev_scipy_utils/sdev_scipy_utils/: .#dsp_utils.py  .__init__.py.~undo-tree~  .embed_utils.py.~undo-tree~  .graph_utils.py.~undo-tree~  .matrix_utils.py.~undo-tree~  .pd_np_utils.py.~undo-tree~  .preprocessing.py.~undo-tree~  __init__.py  assorted.py  dsp_utils.py  elo_utils.py  embed_utils.py  fselection_utils.py  gaussian_utils.py  graph_utils.py  image_proc_utils.py  keras_utils.py  lstm_utils.py  matrix_utils.py  metrics.py  model_profiling.py  neural_net.py  nlp_utils.py  pd_np_utils.py  preprocessing.py  pytorch_utils.py  time_utils.py
(+81 files in other folders)
